--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,41 +4,39 @@
   "description": "",
   "main": "./dist/main.bundle.js",
   "scripts": {
-    "_helper": "npm run _node -- npm-helper.js",
+    "_helper": "yarn run _node -- npm-helper.js",
     "_node": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types",
-    "apply-new-fonts": "npm run _helper apply-new-fonts",
-    "build-dev": "npm run _helper build-dev",
-    "build-main-thread": "npm run _helper build-main-thread",
-    "build-prod": "npm run _helper build-prod",
-    "build-profile": "npm run _helper build-profile",
-    "build-wpdll": "npm run _helper build-wpdll",
-    "debug-main": "npm run _helper debug-main",
-    "generate-font-project": "npm run _helper generate-font-project",
-    "help": "npm run _helper help",
-    "hot-server": "npm run build-main-thread && npm run build-wpdll && npm run hot-server-only",
-    "hot-server-only": "npm run _helper hot-server",
-    "inject-code-prod": "npm run _helper inject-code-prod",
-    "inject-sourcemaps-prod": "npm run _helper inject-sourcemaps-prod",
+    "apply-new-fonts": "yarn run _helper apply-new-fonts",
+    "build-dev": "yarn run _helper build-dev",
+    "build-main-thread": "yarn run _helper build-main-thread",
+    "build-prod": "yarn run _helper build-prod",
+    "build-profile": "yarn run _helper build-profile",
+    "build-wpdll": "yarn run _helper build-wpdll",
+    "debug-main": "yarn run _helper debug-main",
+    "generate-font-project": "yarn run _helper generate-font-project",
+    "help": "yarn run _helper help",
+    "hot-server": "yarn run build-main-thread && yarn run build-wpdll && yarn run hot-server-only",
+    "hot-server-only": "yarn run _helper hot-server",
+    "inject-code-prod": "yarn run _helper inject-code-prod",
+    "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
     "lint": "cd .. && eslint .",
-    "local-visdiff": "npm run _helper local-visdiff",
+    "local-visdiff": "yarn run _helper local-visdiff",
     "mocha": "KEYBASE_RUN_MODE=devel node_modules/mocha/bin/mocha --require source-map-support/register dist/test.bundle.js",
-    "package": "npm run _helper package --",
-    "postinstall": "npm run _helper postinstall",
-    "render-screenshots": "npm run _helper render-screenshots",
-    "setup-debug-main": "npm run _helper setup-debug-main",
-    "shrinkwrap-audit": "npm run _node npm-shrinkwrap-audit",
-    "start": "npm run _helper start",
-    "start-cold": "npm run _helper start-cold",
-    "start-hot": "npm run _helper start-hot",
-    "start-hot-debug": "npm run _helper start-hot-debug",
-    "start-prod": "npm run _helper start-prod",
-    "test": "npm run _helper test && npm run mocha",
-    "undiff-log": "npm run _helper undiff-log",
-    "updated-fonts": "npm run _helper updated-fonts",
+    "package": "yarn run _helper package --",
+    "postinstall": "yarn run _helper postinstall",
+    "render-screenshots": "yarn run _helper render-screenshots",
+    "setup-debug-main": "yarn run _helper setup-debug-main",
+    "start": "yarn run _helper start",
+    "start-cold": "yarn run _helper start-cold",
+    "start-hot": "yarn run _helper start-hot",
+    "start-hot-debug": "yarn run _helper start-hot-debug",
+    "start-prod": "yarn run _helper start-prod",
+    "test": "yarn run _helper test && yarn run mocha",
+    "undiff-log": "yarn run _helper undiff-log",
+    "updated-fonts": "yarn run _helper updated-fonts",
     "vendor-install": "node npm-vendor.js",
     "vendor-update": "node npm-vendor.js update",
-    "watch-test-file": "KEYBASE_RUN_MODE=devel npm run _helper watch-test-file",
-    "wrap": "npm uninstall fsevents && npm prune && npm dedupe && npm shrinkwrap --dev"
+    "watch-test-file": "KEYBASE_RUN_MODE=devel yarn run _helper watch-test-file"
   },
   "keywords": [],
   "author": "",
