--- a/desktop/package.json
+++ b/desktop/package.json
@@ -86,6 +86,7 @@
     "babel-runtime": "6.11.6",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
+    "css-loader": "^0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
     "electron": "1.4.3",
@@ -117,6 +118,7 @@
     "redux-logger": "2.7.0",
     "shrinkpack": "0.17.1",
     "source-map-support": "0.4.5",
+    "style-loader": "^0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.2",
     "webpack-dashboard": "0.2.0",
