--- a/pvl-tools/package.json
+++ b/pvl-tools/package.json
@@ -4,6 +4,7 @@
   "description": "Tools for converting pvl from cson into a useable form",
   "main": "reader.iced",
   "scripts": {
+    "build": "./reader.iced pvl.cson --go > ../go/pvl/hardcoded.go",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
