--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,11 +10,11 @@
         name: flow
         entry: sh
         language: system
-        files: ''
+        files: \.js$
         args: [-c, 'cd shared && yarn run flow']
 
 -   repo: git@github.com:keybase/pre-commit-golang.git
-    sha: '04b422b4c7fabfcf586e563e54334c659e6fd189'
+    sha: 'b15b3e743ccca9eeaa7fd4f8a064d2ab32b157bd'
     hooks:
     -   id: go-fmt
     -   id: go-vet
