--- a/shared/react-native/android/app/src/main/AndroidManifest.xml
+++ b/shared/react-native/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
       <activity
         android:name=".MainActivity"
         android:screenOrientation="portrait"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/SplashTheme">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
