--- a/shared/react-native/ios/Keybase/Info.plist
+++ b/shared/react-native/ios/Keybase/Info.plist
@@ -60,5 +60,7 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
 	<string>Scanning codes</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Attaching images to Chat messages</string>
 </dict>
 </plist>
