--- a/shared/react-native/android/settings.gradle
+++ b/shared/react-native/android/settings.gradle
@@ -5,3 +5,5 @@ include ':react-native-push-notification', ':app'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../../node_modules/react-native-push-notification/android')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../../node_modules/react-native-camera/android')
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../../node_modules/react-native-image-picker/android')
