--- a/shared/package.json
+++ b/shared/package.json
@@ -84,6 +84,7 @@
     "redux-batched-subscribe": "0.1.6",
     "redux-saga": "0.14.3",
     "redux-thunk": "2.2.0",
+    "reselect": "2.5.4",
     "semver": "5.3.0",
     "shallowequal": "0.2.2",
     "transit-immutable-js": "0.7.0",
