--- a/shared/package.json
+++ b/shared/package.json
@@ -82,8 +82,10 @@
     "react-virtualized": "8.11.0",
     "recompose": "0.22.0",
     "redux": "3.6.0",
+    "redux-batched-subscribe": "0.1.6",
     "redux-saga": "0.14.3",
     "redux-thunk": "2.2.0",
+    "reselect": "2.5.4",
     "semver": "5.3.0",
     "shallowequal": "0.2.2",
     "transit-immutable-js": "0.7.0",
