--- a/shared/react-native/android/app/src/main/AndroidManifest.xml
+++ b/shared/react-native/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
       <activity
         android:name=".MainActivity"
         android:screenOrientation="portrait"
+        android:launchMode="singleTop"
         android:label="@string/app_name"
         android:theme="@style/SplashTheme">
         <intent-filter>
