--- a/shared/react-native/android/settings.gradle
+++ b/shared/react-native/android/settings.gradle
@@ -7,3 +7,5 @@ include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../../node_modules/react-native-camera/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../../node_modules/react-native-image-picker/android')
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../../node_modules/react-native-fs/android')
