--- a/shared/package.json
+++ b/shared/package.json
@@ -78,6 +78,7 @@
     "react-native-fs": "2.1.0-rc.1",
     "react-native-image-picker": "0.25.7",
     "react-native-push-notification": "git://github.com/keybase/react-native-push-notification#eedae53f4346223b5aee60ef2702ecc47a01fcd2",
+    "react-navigation": "^1.0.0-beta.7",
     "react-redux": "5.0.2",
     "react-tap-event-plugin": "2.0.1",
     "react-virtualized": "8.11.0",
