--- a/shared/.flowconfig
+++ b/shared/.flowconfig
@@ -9,6 +9,7 @@
 .*/node_modules/json5/.*
 .*/node_modules/npm/.*
 .*/node_modules/react-native/.*
+.*/node_modules/react-navigation/.*
 .*/node_modules/react-tap-event-plugin/node_modules/.*
 .*/node_modules/react/.*
 .*/node_modules/resolve/.*
