--- a/shared/ios/Keybase/Info.plist
+++ b/shared/ios/Keybase/Info.plist
@@ -68,6 +68,10 @@
 	<string>Attaching images to chat messages</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>Keybase does not use this data! Please send feedback if you see this message.</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>INSendMessageIntent</string>
+	</array>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UIAppFonts</key>
