--- a/shared/ios/KeybaseShare/Info.plist
+++ b/shared/ios/KeybaseShare/Info.plist
@@ -24,6 +24,10 @@
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
+			<key>IntentsSupported</key>
+			<array>
+				<string>INSendMessageIntent</string>
+			</array>
 			<key>NSExtensionActivationRule</key>
 			<string>SUBQUERY (
                           extensionItems,
