--- a/shared/package.json
+++ b/shared/package.json
@@ -81,6 +81,7 @@
     "@react-navigation/core": "7.14.0",
     "@react-navigation/native": "7.1.28",
     "@react-navigation/native-stack": "7.12.0",
+    "@shopify/flash-list": "2.2.2",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "emoji-datasource-apple": "16.0.0",
